--- a/teaching/24S-5218/presentation_schedule.htm
+++ b/teaching/24S-5218/presentation_schedule.htm
@@ -36,7 +36,7 @@ div img:hover{
 	
     <p style="margin-top:5px;">
 	<center>
-	<font size="4"> <b>Spring 2023</b></font> &nbsp; &nbsp; 
+	<font size="4"> <b>Spring 2024</b></font> &nbsp; &nbsp; 
 	<br>
 	</center>
 	</p>
@@ -137,97 +137,169 @@ div img:hover{
 	<table border = "0" cellspacing="5px">
 		<tr>
 			<td width=100 style='width:80.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Date</b> </font></td>
-			<td width=500 style='width:180.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Team</b> </font></td>
-			<td width=500 style='width:480.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Project Title</b> </font></td>
+			<td width=800 style='width:800.0pt;background:#EAEDED;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Team</b> </font></td>
 		</tr> 
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/20 </font></td>
-			<td width=500 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Ernest Cubit, <br> Samir Tarda, <br> Syed Ali </font>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/16 </font></td>
+			<td width=800 style='width:800.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Ikram Mohammed </font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Satellite Imagery for Solar Farm Detection and Growth </font></td>
 		</tr>
+
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/20 </font></td>
-			<td width=500 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Manish Vemulapalli </font>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/16 </font></td>
+			<td width=800 style='width:800.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Yuvaraj Sriramoju, Achyuth Reddy Kanumanthu, and Vamshi Kalyan Yerramilli </font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Automatic Speech Recognition Systems in School </font></td>
 		</tr>
+
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/20 </font></td>
-			<td width=500 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Gayathri Katkojwala, <br>Sai Nikhil Kotte </font>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/16 </font></td>
+			<td width=800 style='width:800.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Sushant Thapa and Joseph Caldwell </font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> U-Net image segmentation using Deep learning techniques </font></td>
 		</tr>
+
 		<tr>
-			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/20 </font></td>
-			<td width=500 style='width:180.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				Jashia Mitayeegiri, <br> Rahul Siddartha Gotti </font>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/16 </font></td>
+			<td width=800 style='width:800.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Qi Cai and Xin Gao</font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Image Caption Genereation </font></td>
 		</tr>
-		
-		
-		
-		
-		
-		
+
 		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
-			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Shaohua Dong </font></td>
-			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Edge-Aware Guidance Fusion Network for RGB–Thermal Scene Parsing</font></td>
-		</tr>
-		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
-			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Blake Fuller </font></td>
-			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Robotic Arm Reinforcement Learning</font></td>
-		</tr>
-		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
-			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Bhargavi Kondaveeti, <br> Rushitha Chalamalasetty, <br> Mounish Seeni </font></td>
-			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Sign Language Detection</font></td>
-		</tr>
-		<tr>
-			<td width=100  style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
-			<td width=500 style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
-				sri ram relangi, <br> shanmukh datta Koganti, <br> Lakshme Prasaad Reddy Nandi </font>
+			<td width=100  style='width:80.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/16 </font></td>
+			<td width=800 style='width:800.0pt;background:#FEF9E7;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Sreeja Bommineni, Navya Bade, and Nandini Nagiri</font>
 			</td>
-			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> na  </font></td>
 		</tr>
+
 		<tr>
-			<td width=100 style='width:80.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
-			<td width=500  style='width:180.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Pradhyumna Poralla, <br> Bharath Posa, <br> Ikshwak Varma Alluri </font></td>
-			<td width=500 style='width:480.0pt;background:#EBF5FB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Sounds of Birds: Developing Deep Learning Models for Accurate Bird Species Identification through Vocalizations</font></td>
+			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/18 </font></td>
+			<td width=800 style='width:800.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Ahmed Aljohani</font>
+			</td>
 		</tr>
-		
-		
-		
-		
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/18 </font></td>
+			<td width=800 style='width:800.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Guna Sindhuja Siripurapu, Rohit Potluri, and Trisha Reddy Nidjintha</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/18 </font></td>
+			<td width=800 style='width:800.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Aditya Tripathi, Poorna Chander Alladi, and Priyanka Bai Durvas</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/18 </font></td>
+			<td width=800 style='width:800.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Lakshmi manjusha yarreddu, Vijay Kumar Goud Rekala, and Bala Naga Narasimha Reddy Machha</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/18 </font></td>
+			<td width=800 style='width:800.0pt;background:#ebf5dc;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Xinpeng Xie, Chenyang Yu, and Chaowei Shi</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/23 </font></td>
+			<td width=800 style='width:800.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Yaswanth Thota, Naresh kampasati, and sushanth kodipyaka</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/23 </font></td>
+			<td width=800 style='width:800.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Ashwini Sharma and Arun Kumar Gangireddy</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/23 </font></td>
+			<td width=800 style='width:800.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Shiny Shamma Kota, Sai Teja Narra Venkata, and Harinath Chakali</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/23 </font></td>
+			<td width=800 style='width:800.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Divyashree Bislahalli and Sribala Putcha</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/23 </font></td>
+			<td width=800 style='width:800.0pt;background:#efeaf3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Rohit suddala, Mukunda Krishna Ramishetty, and Harshavardhan Reddy Marella</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=800 style='width:800.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Saini Sai Preetham</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=800 style='width:800.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Vishal Rachuri, Ram Srinivas Katragadda, and Anusha chilakamarri</font>
+			</td>
+		</tr>
 		
 		<tr>
-			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/27 </font></td>
-			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Yeshwanth Pulapa </font></td>
-			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> sentence word predictor </font></td>
+			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=800 style='width:800.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				bing fan</font>
+			</td>
 		</tr>
+
 		<tr>
-			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/27 </font></td>
-			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Mayur Vora, <br> Keya shah, <br> Twumasi Boatneg  </font></td>
-			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Image recognition with deep learning techniques</font></td>
+			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=800 style='width:800.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Maa Venkat Satya Narayana, Sai Karthik Yadav D, and Mohammed Adeeb Farhan</font>
+			</td>
 		</tr>
+
 		<tr>
-			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/27 </font></td>
-			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Justin Garrigus </font></td>
-			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Neural Turing Machine: Logic Gating</font></td>
+			<td width=100  style='width:80.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 5/2 </font></td>
+			<td width=800 style='width:800.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Srinivas Abburi, Tejaswi Mandava, and Sumanth Ethamukkala </font>
+			</td>
 		</tr>
+
 		<tr>
-			<td width=100 style='width:80.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/27 </font></td>
-			<td width=500  style='width:180.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Venkata Kovvuri, LakshmanKumar Puppala, Harshavardhan Aila </font></td>
-			<td width=500 style='width:480.0pt;background:#F1F9C3;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Text Summarisation using Deep Learning</font></td>
+			<td width=100  style='width:80.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 5/2 </font></td>
+			<td width=800 style='width:800.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Lingutla Deepika, Malapati Ushashree, and Phani sri Vinnakota</font>
+			</td>
 		</tr>
-		
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 5/2 </font></td>
+			<td width=800 style='width:800.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Bizhan Alipour PIjani and Md Amit Khan</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 5/2 </font></td>
+			<td width=800 style='width:800.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Nagasai mandalapu, SaiKrishna meduri, and Krishna Varma Ayinampudi</font>
+			</td>
+		</tr>
 		
 	</table>
 	</p>
