--- a/teaching/24S-5218/index.htm
+++ b/teaching/24S-5218/index.htm
@@ -158,6 +158,9 @@ course website regularly for updated reading materials.</font>
 			<font size="4"> <b>02/09/2023:</b> Paper review list 1 is out, due on 2/19.</font>
 		</li> -->
 		<li>
+			<font size="4"> <b>03/26/2023:</b> The schedule of project presention is <a href="./presentation_schedule.htm" target="_blank"><font color="#0099ff">out</font></a>.</font>
+		</li>
+		<li>
 			<font size="4"> <b>03/10/2023:</b> The project proposal is due on 3/10.</font>
 		</li>
 		<li>
@@ -175,9 +178,9 @@ course website regularly for updated reading materials.</font>
 		<li>
 			<font size="4"> <a href="./course_project.htm" target="_blank"><font color="#0099ff">Course Project</font></a></font>
 		</li>
-		<!-- <li>
+		<li>
 			<font size="4"> <a href="./presentation_schedule.htm" target="_blank"><font color="#0099ff">Course Project Presentation Schedule</font></a></font>
-		</li>  -->
+		</li> 
 	</ul>
 	
 	
