--- a/teaching/24S-5218/presentation_schedule.htm
+++ b/teaching/24S-5218/presentation_schedule.htm
@@ -274,6 +274,13 @@ div img:hover{
 		</tr>
 
 		<tr>
+			<td width=100  style='width:80.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/25 </font></td>
+			<td width=800 style='width:800.0pt;background:#dbf1f4;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Loku Bhanu Teja Reddy Singadi, Jaya Sai Krishna Paleru, and Kandula Sunny Kumar</font>
+			</td>
+		</tr>
+
+		<tr>
 			<td width=100  style='width:80.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 5/2 </font></td>
 			<td width=800 style='width:800.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				Srinivas Abburi, Tejaswi Mandava, and Sumanth Ethamukkala </font>
@@ -298,6 +305,13 @@ div img:hover{
 			<td width=100  style='width:80.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 5/2 </font></td>
 			<td width=800 style='width:800.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				Nagasai mandalapu, SaiKrishna meduri, and Krishna Varma Ayinampudi</font>
+			</td>
+		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 5/2 </font></td>
+			<td width=800 style='width:800.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Likhil Penujuli, Sai Sandhya Nannapaneni, and Dishith Nalagatla</font>
 			</td>
 		</tr>
 		
