--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2024-03:</font> A paper on multi-object tracking is accepted to IEEE Transactions on Neural Networks and Learning Systems.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2024-03:</font> Check out our SMOT (<a href="https://arxiv.org/abs/2403.05021" target="_blank"><font><font color="#0099ff">pdf</font></font></a>) for a new task of semantic multi-object tracking.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2024-03:</font> Check out our LoRAT (<a href="https://arxiv.org/abs/2403.05231" target="_blank"><font><font color="#0099ff">pdf</font></font></a>) with new state-of-the-art results on major large-scale tracking benchmarks.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2024-03:</font> Present VastTrack (<a href="https://arxiv.org/abs/2403.03493" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/HengLan/VastTrack" target="_blank"><font><font color="#0099ff">code-data</font></font></a>), containing over 2.1K classes/50K videos for vast category visual tracking.</li>
