--- a/publications.html
+++ b/publications.html
@@ -134,22 +134,6 @@
 		</tr>
 
 		<tr>
-			<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">AttMOT: Improving Multiple-Object Tracking by Introducing Auxiliary Pedestrian Attributes</font>
-					<br>
-					<font color="#000000" >Y. Li, Z. Xiao, L. Yang, D. Meng, X. Zhou, H. Fan, and L. Zhang</font>
-					<br>
-					<font>arXiv:2308.07537, 2023. </font>
-					<br>
-					<a href="https://arxiv.org/abs/2308.07537" target="_blank"><font color="#0099ff">paper</font></a> 
-					<br>
-				</p>
-			</td>
-		</tr>
-
-		<tr>
 			<td><img src="./publication/dmt.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
@@ -220,6 +204,22 @@
 		<br>
 	
 		<table border=0 cellpadding=4>
+
+			<tr>
+				<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">AttMOT: Improving Multiple-Object Tracking by Introducing Auxiliary Pedestrian Attributes</font>
+						<br>
+						<font color="#000000" >Y. Li, Z. Xiao, L. Yang, D. Meng, X. Zhou, H. Fan, and L. Zhang</font>
+						<br>
+						<font>IEEE Transactions on Neural Networks and Learning Systems (<b>T-NNLS</b>), 2024, in press. </font>
+						<br>
+						<a href="https://arxiv.org/abs/2308.07537" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/AttMOT" target="_blank"><font color="#0099ff">code</font></a>
+						<br>
+					</p>
+				</td>
+			</tr>
 
 			<tr>
 				<td><img src="./publication/cgstvg.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
