--- a/publications.html
+++ b/publications.html
@@ -213,7 +213,7 @@
 						<br>
 						<font color="#000000" >Y. Li, Z. Xiao, L. Yang, D. Meng, X. Zhou, H. Fan, and L. Zhang</font>
 						<br>
-						<font>IEEE Transactions on Neural Networks and Learning Systems (<b>T-NNLS</b>), 2024, in press. </font>
+						<font>IEEE Transactions on Neural Networks and Learning Systems (<b>T-NNLS</b>), 2024, accepted. </font>
 						<br>
 						<a href="https://arxiv.org/abs/2308.07537" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/AttMOT" target="_blank"><font color="#0099ff">code</font></a>
 						<br>
