--- a/publications.html
+++ b/publications.html
@@ -294,7 +294,7 @@
 						<br>
 						<font color="#000000" >L. Zhang, X. Gu, C. Li, T. Luo, and H. Fan</font>
 						<br>
-						<font>International Journal of Computer Vision (<b>IJCV</b>), 2024, in press. </font>
+						<font>International Journal of Computer Vision (<b>IJCV</b>), 132: 1187-1204, 2024. </font>
 						<br>
 						<a href="https://arxiv.org/abs/2309.15431" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/GX77/LCVSL" target="_blank"><font color="#0099ff">code</font></a>
 						<br>
