--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -106,7 +106,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">TBD</font></h3>
+                <h3><font color="#355DDC">Jailbreaking LLMs with Reinforcement Learning</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Zexuan Meng</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 04/15/2024 (Monday)</p>
                 <p><b>Room:</b> Discover Park F219 </p>
