--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -87,21 +87,11 @@
 
 		<h2><font color="#FA8072">Upcoming Events</font></h2>
 
-        <section class="section speaker">
-            <div class="speaker-text">
-                <h3><font color="#355DDC">Jailbreaking LLMs with Reinforcement Learning</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Zexuan Meng</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 04/15/2024 (Monday)</p>
-                <p><b>Room:</b> Discover Park F219 </p>
-            </div>
-            <div class="speaker-img">
-                <img src="welcome5.png" alt="Speaker Image"> 
-            </div>
-        </section>
+        
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">TBD</font></h3>
+                <h3><font color="#355DDC">Unsupervised Object Tracking</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Xiaoqiong Liu</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 04/22/2024 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
@@ -114,6 +104,18 @@
         <br>
 
         <h2><font color="#7FB3D5">Past Events</font></h2>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Jailbreaking LLMs with Reinforcement Learning</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Zexuan Meng</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 04/15/2024 (Monday)</p>
+                <p><b>Room:</b> Discover Park F219 </p>
+            </div>
+            <div class="speaker-img">
+                <img src="welcome5.png" alt="Speaker Image"> 
+            </div>
+        </section>
         
         <section class="section speaker">
             <div class="speaker-text">
