--- a/teaching/24S-5218/presentation_schedule.htm
+++ b/teaching/24S-5218/presentation_schedule.htm
@@ -314,6 +314,13 @@ div img:hover{
 				Likhil Penujuli, Sai Sandhya Nannapaneni, and Dishith Nalagatla</font>
 			</td>
 		</tr>
+
+		<tr>
+			<td width=100  style='width:80.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 5/2 </font></td>
+			<td width=800 style='width:800.0pt;background:#d9f7e9;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
+				Bhavani Mandula</font>
+			</td>
+		</tr>
 		
 	</table>
 	</p>
