--- a/service.html
+++ b/service.html
@@ -69,6 +69,13 @@
 				<br>
 			</p>
 		</li>
+
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				IEEE/RSJ International Conference on Intelligent Robots and Systems (<font style="font-weight:bold">IROS</font>)</font>, <font size="3">2024</font>
+				<br>
+			</p>
+		</li>
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
