--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -91,6 +91,22 @@
 
         <section class="section speaker">
             <div class="speaker-text">
+                <h3><font color="#355DDC">Single-Stage Visual Query Localization in Egocentric Videos                </font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Bing Fan</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 05/06/2024 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
+            </div>
+            <div class="speaker-img">
+                <img src="welcome7.png" alt="Speaker Image"> 
+            </div>
+        </section>
+
+        <br>
+
+        <h2><font color="#7FB3D5">Past Events</font></h2>
+
+        <section class="section speaker">
+            <div class="speaker-text">
                 <h3><font color="#355DDC">Unsupervised Object Tracking</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Xiaoqiong Liu</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 04/22/2024 (Monday)</p>
@@ -100,10 +116,6 @@
                 <img src="welcome6.png" alt="Speaker Image"> 
             </div>
         </section>
-
-        <br>
-
-        <h2><font color="#7FB3D5">Past Events</font></h2>
 
         <section class="section speaker">
             <div class="speaker-text">
