--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -91,19 +91,31 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Single-Stage Visual Query Localization in Egocentric Videos                </font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Bing Fan</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 05/06/2024 (Monday)</p>
-                <p><b>Room:</b> F219 </p>
+                <h3><font color="#355DDC">Class Incremental Learning via Likelihood Ratio Based Task Prediction</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Md Abdullah Al Forhad </a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 05/20/2024 (Monday)</p>
+                <p><b>Room:</b> F285 </p>
             </div>
             <div class="speaker-img">
-                <img src="welcome7.png" alt="Speaker Image"> 
+                <img src="welcome8.png" alt="Speaker Image"> 
             </div>
         </section>
 
         <br>
 
         <h2><font color="#7FB3D5">Past Events</font></h2>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Single-Stage Visual Query Localization in Egocentric Videos                </font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Bing Fan</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 05/13/2024 (Monday)</p>
+                <p><b>Room:</b> F285 </p>
+            </div>
+            <div class="speaker-img">
+                <img src="welcome7.png" alt="Speaker Image"> 
+            </div>
+        </section>
 
         <section class="section speaker">
             <div class="speaker-text">
