--- a/publications.html
+++ b/publications.html
@@ -27,17 +27,17 @@
 <div class="central_body">
 	<!-- full journal papers -->
 
-	<font size="3">For full publication list, please go to <a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#0099ff">Google Scholar</font></a>.</font>
+	<font size="3">For full publication list, please go to my <a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#0099ff">Google Scholar profile</font></a>.</font>
 	<br>
 	<!-- Note: * equal contribution &nbsp; &dagger;equal advising -->
-	<HR>
+	<!-- <HR> -->
 	
-	<font size="4" color="#034f84"><b>Pre-prints</b></font>
-	<br>
+	<!-- <font size="4" color="#034f84"><b>Pre-prints</b></font>
+	<br> -->
 
-	<table border=0 cellpadding=4>
+	<!-- <table border=0 cellpadding=4> -->
 		
-		<tr>
+		<!-- <tr>
 			<td><img src="./publication/smotsmall.gif", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
@@ -147,7 +147,7 @@
 					<br>
 				</p>
 			</td>
-		</tr>
+		</tr> -->
 
 		 <!-- <tr>
 			<td><img src="./publication/semo.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
@@ -181,7 +181,7 @@
 			</td>
 		</tr> -->
 		
-		<tr>
+		<!-- <tr>
 			<td><img src="./publication/mga.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
@@ -195,9 +195,9 @@
 					<br>
 				</p>
 			</td>
-		</tr>
+		</tr> -->
 
-	</table>
+	<!-- </table> -->
 
 	<HR>
 		<font size="4" color="#034f84"><b>2024 / in press</b></font>
