--- a/publications.html
+++ b/publications.html
@@ -118,22 +118,6 @@
 		</tr>
 
 		<tr>
-			<td><img src="./publication/vlt23.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">Divert More Attention to Vision-Language Object Tracking</font>
-					<br>
-					<font color="#000000" >M. Guo, Z. Zhang, L. Jing, H. Ling, and H. Fan</font>
-					<br>
-					<font>arXiv:2307.10046, 2023. </font>
-					<br>
-					<a href="https://arxiv.org/abs/2307.10046" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <font color="#0099ff">code</font>
-					<br>
-				</p>
-			</td>
-		</tr>
-
-		<tr>
 			<td><img src="./publication/dmt.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 			<td valign=top>
 				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
@@ -204,6 +188,22 @@
 		<br>
 	
 		<table border=0 cellpadding=4>
+
+			<tr>
+				<td><img src="./publication/vlt23.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Divert More Attention to Vision-Language Object Tracking</font>
+						<br>
+						<font color="#000000" >M. Guo, Z. Zhang, L. Jing, H. Ling, and H. Fan</font>
+						<br>
+						<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI), 2024, accepted. </font>
+						<br>
+						<a href="https://arxiv.org/abs/2307.10046" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>
+						<br>
+					</p>
+				</td>
+			</tr>
 
 			<tr>
 				<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
