--- a/publications.html
+++ b/publications.html
@@ -197,7 +197,7 @@
 						<br>
 						<font color="#000000" >M. Guo, Z. Zhang, L. Jing, H. Ling, and H. Fan</font>
 						<br>
-						<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI), 2024, accepted. </font>
+						<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 2024, accepted. </font>
 						<br>
 						<a href="https://arxiv.org/abs/2307.10046" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#0099ff">code</font></a>
 						<br>
