--- a/publications.html
+++ b/publications.html
@@ -231,7 +231,7 @@
 						<br>
 						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024 </font>
 						<br>
-						<a href="https://arxiv.org/abs/2401.01578" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/HengLan/CGSTVG" target="_blank"><font color="#0099ff">code</font></a>  
+						<a href="https://arxiv.org/abs/2401.01578" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="./publication/CG-STVG-CVPR24-poster.pdf" target="_blank"><font color="#0099ff">poster</font></a> &nbsp; <a href="https://github.com/HengLan/CGSTVG" target="_blank"><font color="#0099ff">code</font></a>  
 						<br>
 					</p>
 				</td>
