--- a/group.html
+++ b/group.html
@@ -35,6 +35,7 @@
 		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font>, PhD student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, Master student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Pranay Rishith Bondugula</font>, Master student</li>
+		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Saikiran Motati</font>, TAMS High School student</li>
     </ul>
 
