--- a/group.html
+++ b/group.html
@@ -33,10 +33,7 @@
 		<li><font style="font-weight:bold; line-height: 120%">Bing Fan</font>, PhD student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Shaohua Dong</font>, PhD student</li>
 		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font>, PhD student</li>
-		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, Master student</li>
-		<li><font style="font-weight:bold; line-height: 120%">Pranay Rishith Bondugula</font>, Master student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student</li>
-		<li><font style="font-weight:bold; line-height: 120%">Saikiran Motati</font>, TAMS High School student</li>
     </ul>
 
 	<font size="4" color="#034f84"><b>External Students</b></font>
@@ -54,7 +51,10 @@
 	<font size="4" color="#034f84"><b>Alumni</b></font>
 	<br>
 	<ul style="margin-top:5px;">
-		<li> <font style="font-weight:bold; line-height: 120%">Thanh Le</font>, MS, 2023 (next stop->PhD student at UNT)</li>
+		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, MS, 2024</li>
+		<li><font style="font-weight:bold; line-height: 120%">Pranay Rishith Bondugula</font>, MS, 2024</li>
+		<li><font style="font-weight:bold; line-height: 120%">Saikiran Motati</font>, K-12 student from TAMS, 2024</li>
+		<li> <font style="font-weight:bold; line-height: 120%">Thanh Le</font>, MS, 2023</li>
 		<li> <font style="font-weight:bold; line-height: 120%">Helen Li</font>, K-12 student (female) from TAMS, 2023</li>
     </ul>
 
