--- a/publications.html
+++ b/publications.html
@@ -247,7 +247,7 @@
 						<br>
 						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024 </font>
 						<br>
-						paper &nbsp; code 
+						<a href="https://arxiv.org/abs/2406.04999" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; code 
 						<br>
 					</p>
 				</td>
