--- a/publications.html
+++ b/publications.html
@@ -263,7 +263,7 @@
 						<br>
 						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024 </font>
 						<br>
-						paper &nbsp; code 
+						<a href="./publication/Text_detection_CVPR_2024_paper.pdf" target="_blank"><font color="#0099ff">paper</font></a> 
 						<br>
 					</p>
 				</td>
