--- a/publications.html
+++ b/publications.html
@@ -164,22 +164,6 @@
 				</p>
 			</td>
 		</tr> -->
-		
-		<!-- <tr>
-			<td><img src="./publication/mga.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-			<td valign=top>
-				<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-					<font style="font-weight:bold">Robust Domain Adaptive Object Detection with Unified Multi-Granularity Alignment</font>
-					<br>
-					<font color="#000000" >L. Zhang, W. Zhou, H. Fan, T. Luo, and H. Ling</font>
-					<br>
-					<font>	arXiv:2301.00371, 2023. </font>
-					<br>
-					<a href="https://arxiv.org/abs/2301.00371" target="_blank"><font color="#0099ff">paper</font></a>
-					<br>
-				</p>
-			</td>
-		</tr> -->
 
 	<!-- </table> -->
 
@@ -188,6 +172,20 @@
 		<br>
 	
 		<table border=0 cellpadding=4>
+
+			<td><img src="./publication/mga.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Robust Domain Adaptive Object Detection with Unified Multi-Granularity Alignment</font>
+						<br>
+						<font color="#000000" >L. Zhang, W. Zhou, H. Fan&dagger;, T. Luo, and H. Ling (&dagger;corresponding author)</font>
+						<br>
+						<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 2024, accepted. </font>
+						<br>
+						<a href="https://arxiv.org/abs/2301.00371" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="https://github.com/tiankongzhang/MGA" target="_blank"><font color="#0099ff">code</font></a>
+						<br>
+					</p>
+				</td>
 
 			<tr>
 				<td><img src="./publication/vlt23.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
