--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 
 	<font size="4" color="#034f84"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">2024-06:</font> A paper (pdf/code) on domain adaptive object detection is accepted to PAMI.</li>
+		<li><font style="font-weight:bold; line-height: 120%">2024-06:</font> A paper (<a href="https://arxiv.org/abs/2301.00371" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/tiankongzhang/MGA" target="_blank"><font><font color="#0099ff">code</font></font></a>) on domain adaptive object detection is accepted to PAMI.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2024-06:</font> I will serve as an Area Chair (AC) for <a href="https://wacv2025.thecvf.com/" target="_blank"><font><font color="#0099ff">WACV 2025</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2024-05:</font> A paper (<a href="https://arxiv.org/abs/2307.10046" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/JudasDie/SOTS" target="_blank"><font><font color="#0099ff">code</font></font></a>) on vision-language tracking is accepted to PAMI.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2024-03:</font> Our AttMOT (<a href="https://arxiv.org/abs/2308.07537" target="_blank"><font><font color="#0099ff">pdf</font></font></a>/<a href="https://github.com/HengLan/AttMOT" target="_blank"><font><font color="#0099ff">code</font></font></a>) is accepted to IEEE Transactions on Neural Networks and Learning Systems.</li>
