--- a/publications.html
+++ b/publications.html
@@ -545,7 +545,7 @@
 					<br>
 					<font>European Conference on Computer Vision (<b>ECCV</b>), 2022.</font>
 					<br>
-					<a href="./publication/InvertFill-ECCV-2022.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="./publication/InvertFill-ECCV-2022-Supp.pdf" target="_blank"><font color="#0099ff">supplementary</font></a> &nbsp; <a href="https://github.com/yeates/InvertFill" target="_blank"><font color="#0099ff">code</font></a>
+					<a href="./publication/InvertFill-ECCV-2022.pdf" target="_blank"><font color="#0099ff">paper</font></a> &nbsp; <a href="./publication/InvertFill-ECCV-2022-Supp.pdf" target="_blank"><font color="#0099ff">supplementary</font></a> 
 					<br>
 				</p>
 			
