--- a/service.html
+++ b/service.html
@@ -48,7 +48,7 @@
 
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				Co-organizer, International Workshop on Computer Vision for UAVs in <font style="font-weight:bold">ECCV</font>, 2020
+				Co-organizer, Computer Vision for UAVs Workshop and Challenge in <font style="font-weight:bold">ECCV</font>, 2020
 				<br>
 			</p>
 		</li>
