--- a/group.html
+++ b/group.html
@@ -30,21 +30,21 @@
 	<font size="4" color="#034f84"><b>Current Students at UNT</b></font>
 	<br>
 	<ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">Bing Fan</font>, PhD student</li>
+		<li><font style="font-weight:bold; line-height: 120%">Bing Fan</font>, PhD student (female)</li>
 		<li><font style="font-weight:bold; line-height: 120%">Shaohua Dong</font>, PhD student</li>
 		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font>, PhD student</li>
-		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, volunteer research assistant</li>
+		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, volunteer research assistant (female)</li>
 		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student</li>
     </ul>
 
-	<font size="4" color="#034f84"><b>External Students</b></font>
+	<!-- <font size="4" color="#034f84"><b>External Students</b></font>
 	<br>
 	<ul style="margin-top:5px;">
 		<li><font style="font-weight:bold; line-height: 120%">Xin Gu</font>, PhD student (University of Chinese Academy of Sciences)</li>
 		<li><font style="font-weight:bold; line-height: 120%">Yifan Jiao</font>, MS student (Institute of Software Chinese Academy of Sciences)</li>
 		<li><font style="font-weight:bold; line-height: 120%">Yunhao Li</font>, MS student (Institute of Software Chinese Academy of Sciences)</li>
 		<li><font style="font-weight:bold; line-height: 120%">Bohai Gu</font>, MS student (Institute of Software Chinese Academy of Sciences)</li>
-    </ul>
+    </ul> -->
 
 
 	<hr>
@@ -52,7 +52,7 @@
 	<font size="4" color="#034f84"><b>Alumni</b></font>
 	<br>
 	<ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, MS, 2024</li>
+		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, MS (female), 2024</li>
 		<li><font style="font-weight:bold; line-height: 120%">Pranay Rishith Bondugula</font>, MS, 2024</li>
 		<li><font style="font-weight:bold; line-height: 120%">Saikiran Motati</font>, K-12 student from TAMS, 2024</li>
 		<li> <font style="font-weight:bold; line-height: 120%">Thanh Le</font>, MS, 2023</li>
