--- a/group.html
+++ b/group.html
@@ -30,9 +30,9 @@
 	<font size="4" color="#034f84"><b>Current Students at UNT</b></font>
 	<br>
 	<ul style="margin-top:5px;">
-		<li><font style="font-weight:bold; line-height: 120%">Bing Fan</font>, PhD student (female)</li>
+		<li><font style="font-weight:bold; line-height: 120%">Bing Fan</font>, PhD student</li>
 		<li><font style="font-weight:bold; line-height: 120%">Shaohua Dong</font>, PhD student</li>
-		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font>, PhD student</li>
+		<li> <font style="font-weight:bold; line-height: 120%">Xiaoqiong Liu</font>, PhD student (female)</li>
 		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, volunteer research assistant (female)</li>
 		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student</li>
     </ul>
